Minor notebook changes

--- a/absolute_binding_free_energies/analyse_abfe.ipynb
+++ b/absolute_binding_free_energies/analyse_abfe.ipynb
@@ -59,7 +59,10 @@
     "\n",
     "# Import plotting libraries\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "# Import numpy for analysis\n",
+    "import numpy as np"
    ]
   },
   {
@@ -280,6 +283,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " ```Python\n",
+    " #FIXME: Answer the above question\n",
+    " ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <span style=\"color:teal\"> 2. Further Analysis</span>\n",
     "<a id=\"further_analysis\"></a>\n",
     "\n",
@@ -335,7 +347,7 @@
     "\n",
     "<img src=\"images/convergence_equil.png\" width=\"1000\"/>\n",
     "\n",
-    "This removes the initial correlation between the time evolution of the repeat runs, and results in average estimates (blue line) for the vanish and discharge stages which show no clear drift with time, suggesting that we have achieved convergence. There appears to be some drift for the restrain stage, although the gradient is very shallow. With equilibration, we found $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-5.95 \\pm 1.05$ kcal mol $^{-1}$ (95 % t-based confidence interval). Note that because `Absolute.analyse()` discards the first 40 % of the trajectory by default for SOMD, this analysis shows that our previous results should not be subject to bias resulting from including the unequilibrated portion of the trajectory.\n",
+    "This removes the initial correlation between the time evolution of the repeat runs, and results in average estimates (blue line) for the vanish and discharge stages which show no clear drift with time, suggesting that we have achieved convergence. There appears to be some drift for the restrain stage, although the gradient is very shallow. With equilibration, we found $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-9.03 \\pm 1.06$ kcal mol $^{-1}$ (95 % t-based confidence interval). Note that because `Absolute.analyse()` discards the first 40 % of the trajectory by default for SOMD, this analysis shows that our previous results should not be subject to bias resulting from including the unequilibrated portion of the trajectory.\n",
     "\n",
     "Repeating this analysis in reverse and comparing with the analysis in the forward direction can be helpful for diagnosing insufficient equilibration time.\n",
     "\n",
@@ -370,7 +382,7 @@
     "\n",
     "<img src=\"images/alt_poses.png\" width=\"1000\"/>\n",
     "\n",
-    "While they appear similar, we found that interconversion occurred very infrequently on the timescale of the simulations. The bound leg calculations were repeated for the alternative binding pose, yielding a binding free energy of $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-5.98 \\pm 1.11$ kcal mol $^{-1}$ (95 % t-based confidence interval).\n",
+    "While they appear similar, we found that interconversion occurred very infrequently on the timescale of the simulations. The bound leg calculations were repeated for the alternative binding pose, yielding a binding free energy of $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-9.06 \\pm 1.12$ kcal mol $^{-1}$ (95 % t-based confidence interval).\n",
     "\n",
     "Where there are alternative binding poses, [the free energies should be combined according to](https://aip.scitation.org/doi/full/10.1063/1.2221683):\n",
     "\n",
@@ -382,7 +394,7 @@
     "\n",
     "##### <span style=\"color:skyblue\"> Exercise: Deviation Between Replicate Runs </span>\n",
     "\n",
-    "Calculate the overall binding free energy by combining the estimates from the two different poses. Propagate the error."
+    "Calculate the overall binding free energy by combining the estimates from the two different poses. The estimates from the two different poses are $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-9.03 \\pm 1.06$ kcal mol $^{-1}$ and $-9.06 \\pm 1.12$ kcal mol $^{-1}$ (95 % t-based confidence intervals). Propagate the error."
    ]
   },
   {
