--- a/absolute_binding_free_energies/setup_abfe.ipynb
+++ b/absolute_binding_free_energies/setup_abfe.ipynb
@@ -564,7 +564,12 @@
     "lam_vals=pd.DataFrame(data={'bonded': [0.0, ... 1.0],\n",
     "                            'coul': [0.0, ... 1.0],\n",
     "                            'vdw':  [0.0, ... 1.0]}))\n",
-    "```"
+    "```\n",
+    "Because of this, the initial value of lambda must be set as a pandas series:\n",
+    "```Python\n",
+    "lam=pd.Series(data={'bonded': 0.0, 'coul': 0.0, 'vdw': 0.0}),\n",
+    "```\n",
+    "Remember to supply the above information when specifying the protocol."
    ]
   },
   {
