Provide link to convergence analysis code

--- a/absolute_binding_free_energies/analyse_abfe.ipynb
+++ b/absolute_binding_free_energies/analyse_abfe.ipynb
@@ -331,7 +331,7 @@
     "#### <span style=\"color:teal\"> 2.2 Is My Equilibration Period Sufficient and are my Results Converged? </span>\n",
     "<a id=\"conv\"></a>\n",
     "\n",
-    "If our free energy estimate is correct, then we should have sampled all relevant regions of configurations space at equilibrium. Performing more sampling by increasing the simulation time should not add any new information and our estimate should not change. This can be checked by repeatedly truncating the data at a given simulation time and analysing the free energy change with the remaining data. The results are plotted for the bound stages, where the blue line shows the average over all runs and the beige fill indicates the 95 % t-based confidence intervals:\n",
+    "If our free energy estimate is correct, then we should have sampled all relevant regions of configurations space at equilibrium. Performing more sampling by increasing the simulation time should not add any new information and our estimate should not change. This can be checked by repeatedly truncating the data at a given simulation time and analysing the free energy change with the remaining data. The results are plotted for the bound stages, where the blue line shows the average over all runs and the beige fill indicates the 95 % t-based confidence intervals. BioSimSpace does not provide the functionality to perform such analysis, but the code used to generate these plots is available [here](https://github.com/fjclark/abfe_analysis/blob/main/abfe_analysis/get_data/convergence_data.py).\n",
     "\n",
     "<img src=\"images/convergence_no_equil.png\" width=\"1000\"/>\n",
     "\n",
