Updates to analysis notebooks

--- a/absolute_binding_free_energies/analyse_abfe.ipynb
+++ b/absolute_binding_free_energies/analyse_abfe.ipynb
@@ -72,7 +72,13 @@
     "### <span style=\"color:teal\"> 1. Basic Analysis in BioSimSpace</span>\n",
     "<a id=\"basic_ana\"></a>\n",
     "\n",
-    "Running a full set of ABFE calculations for the MIF / MIF-180 complex takes days, so we've provided example output for simulations with SOMD in `example_output`. This includes all required input files and output energies, although we've removed the large trajectory files. The Boresch restraints were based on the triazole ring (anchor points shown as spheres):\n",
+    "Running a full set of ABFE calculations for the MIF / MIF-180 complex takes days, so we've provided some example output for simulations with SOMD in `example_output`. This includes:\n",
+    "\n",
+    "- All required input files\n",
+    "- Compressed output energies for all stages of run 1 \n",
+    "- Compressed output energies for the bound discharge stages for runs 1 - 5. \n",
+    "\n",
+    "The Boresch restraints were based on the triazole ring (anchor points shown as spheres):\n",
     "\n",
     "<img src=\"images/boresch_restr_2.png\" width=\"400\"/>\n",
     "\n",
@@ -300,11 +306,11 @@
     "#### <span style=\"color:teal\"> 2.1 Are My Results Reproducible? </span>\n",
     "<a id=\"repro\"></a>\n",
     "\n",
-    "A minimal test of reproducibility is performing replicate runs where all atoms are assigned different initial velocities. This was done to produce the data provided for runs 1 - 5 in `example_output`. Even better, we could have used different starting structures extracted from a simulation of the complex.\n",
+    "A minimal test of reproducibility is performing replicate runs where all atoms are assigned different initial velocities. This was done to produce the data provided for the bound discharge stages for runs 1 - 5 in `example_output`. Even better, we could have used different starting structures extracted from a simulation of the complex.\n",
     "\n",
     "##### <span style=\"color:skyblue\"> Exercise: Deviation Between Replicate Runs </span>\n",
     "\n",
-    "Analyse the data for the 5 replicate runs for the vanish stage of the bound leg to provide a revised estimate of the free energy change for this stage. Calculate a new measure of the uncertainty for this stage, and compare it to the uncertainty estimate obtained for a single run. "
+    "Analyse the data for the 5 replicate runs for the discharge stage of the bound leg to provide a revised estimate of the free energy change for this stage. Calculate a new measure of the uncertainty for this stage, and compare it to the uncertainty estimate obtained for a single run. Note that to save space, only the results for the bound discharge stage have been supplied for all 5 runs."
    ]
   },
   {
@@ -392,7 +398,7 @@
     "\n",
     "Where the subscripts 1 and 2 indicate alternative binding poses. \n",
     "\n",
-    "##### <span style=\"color:skyblue\"> Exercise: Deviation Between Replicate Runs </span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Combining Results for Alternative Binding Poses </span>\n",
     "\n",
     "Calculate the overall binding free energy by combining the estimates from the two different poses. The estimates from the two different poses are $\\Delta\\textit{G}_{\\textrm{Bind}}^o=-9.03 \\pm 1.06$ kcal mol $^{-1}$ and $-9.06 \\pm 1.12$ kcal mol $^{-1}$ (95 % t-based confidence intervals). Propagate the error."
    ]
