Correct images for use of nglviewer

--- a/absolute_binding_free_energies/setup_abfe.ipynb
+++ b/absolute_binding_free_energies/setup_abfe.ipynb
@@ -382,11 +382,11 @@
     "\n",
     "- Click on the menu\n",
     "\n",
-    "<img src=\"images/ngl__new_2.png\" width=\"400\"/>\n",
+    "<img src=\"images/ngl_new_2.png\" width=\"400\"/>\n",
     "\n",
     "- Create a new \"cartoon\" representation. This will only display the protein\n",
     "\n",
-    "<img src=\"images/ngl__new_3.png\" width=\"400\"/>\n",
+    "<img src=\"images/ngl_new_3.png\" width=\"400\"/>\n",
     "\n",
     "- To visualise the anchor points, add a \"spacefill\" representation. Then input the selection \"@idx1,idx2,id3,...\" where the idxs are the indices of the anchor points"
    ]
