--- a/absolute_binding_free_energies/answers/setup_abfe_answers.ipynb
+++ b/absolute_binding_free_energies/answers/setup_abfe_answers.ipynb
@@ -7,7 +7,7 @@
     "# <span style=\"color:teal\"> Absolute Binding Free Energies and Experimental Features in BioSimSpace: Setup</span>\n",
     "This is the first of two jupyter notebooks on Absolute Binding Free Energy (ABFE) calculations in BioSimSpace for the September 2022 CCPBioSim Workshop. This notebook describes how the functionality of BioSimSpace may be extended using the *sandpit*, and how to set up an absolute binding free energy calculation using the functionality present in the Exscientia sandpit. The second notebook, \"analyse_abfe.ipynb\" will discuss the analysis of absolute binding free energy calculations.\n",
     "\n",
-    "This notebook includes core as well as <span style=\"color:purple\">extra</span> options.\n",
+    "This notebook includes core as well as <span style=\"color:purple\">extra</span> options. To ensure you have time to complete all notebooks, **we strongly recommend that you work through the notebooks to the end before returning to complete the extra sections**.\n",
     "\n",
     "##### <span style=\"color:teal\">Required Knowledge</span> \n",
     " - Basic python\n",
