--- a/absolute_binding_free_energies/answers/analyse_abfe_answers.ipynb
+++ b/absolute_binding_free_energies/answers/analyse_abfe_answers.ipynb
@@ -7,7 +7,7 @@
     "# <span style=\"color:teal\"> Absolute Binding Free Energies and Experimental Features in BioSimSpace: Analysis</span>\n",
     "This is the second of two jupyter notebooks on Absolute Binding Free Energy (ABFE) calculations in BioSimSpace for the September 2022 CCPBioSim Workshop. This notebook describes the analysis of ABFE calculations. The first notebook, \"setup_abfe.ipynb\" discussed the integration of experimental features into BioSimSpace through the *sandpit*, and the setup of absolute binding free energy calculations using BioSimSpace.\n",
     "\n",
-    "This notebook includes core as well as <span style=\"color:purple\">extra</span> options.\n",
+    "This notebook includes core as well as <span style=\"color:purple\">extra</span> options. To ensure you have time to complete all notebooks, **we strongly recommend that you work through the notebooks to the end before returning to complete the extra sections**.\n",
     "\n",
     "##### <span style=\"color:teal\">Required Knowledge</span> \n",
     " - Basic python\n",
