Update answers as getCorrection now returns kcal / mol

--- a/absolute_binding_free_energies/answers/analyse_abfe_answers.ipynb
+++ b/absolute_binding_free_energies/answers/analyse_abfe_answers.ipynb
@@ -34,7 +34,6 @@
     "1. [Basic Analysis in BioSimSpace](#basic_ana)    \n",
     "    1.1 [Overlap Matrices](#overlap)    \n",
     "    1.2 [Potentials of Mean Force](#pmf)\n",
-    "   \n",
     "2. [Further Analysis](#further_analysis)   \n",
     "    2.1 [Are My Results Reproducible?](#repro)     \n",
     "    2.2 [Is My Equilibration Period Sufficient and are my Results Converged?](#conv)    \n",
@@ -274,7 +273,7 @@
     "# Get the free energy of turning off the restraint. Note that there is no contribution to the \n",
     "# uncertainty, as this depends only on the restraint dictionary and is identical between runs\n",
     "restraint = BSS.FreeEnergy.Restraint(system, restraint_dict, 298*BSS.Units.Temperature.kelvin)\n",
-    "dg_rest = restraint.getCorrection() / BSS.Units.Energy.kcal_per_mol\n",
+    "dg_rest = restraint.getCorrection().value() # remove units of kcal / mol\n",
     "print(f\"Free energy of releasing restraint: {dg_rest:.2f} kcal / mol\")\n",
     "\n",
     "# Reverse the sign when combining with the overall free energy to be consistent with the cycle\n",
