Print out new restraint dictionary in answers

--- a/absolute_binding_free_energies/answers/setup_abfe_answers.ipynb
+++ b/absolute_binding_free_energies/answers/setup_abfe_answers.ipynb
@@ -425,6 +425,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the indices of the anchor points, which can be visualised as shown above\n",
+    "restraint.toString(engine=\"SOMD\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
