Rename notebooks to be consistent with relative

--- a/absolute_binding_free_energies/answers/setup_abfe_answers.ipynb
+++ b/absolute_binding_free_energies/answers/setup_abfe_answers.ipynb
@@ -630,7 +630,7 @@
     "\n",
     "In reality, we would generally run a large set of calculations including several complete repeat runs. To run such calculations on a cluster, we would recommend taking the approach discussed in the RBFE notebook, using BioSimSpace for the simulation setup and Slurm submission scripts to run the simulations. \n",
     "\n",
-    "Please head over to the \"analyse_abfe\" notebook to learn about the analysis of ABFE calculations."
+    "Please head over to the \"analysis_abfe\" notebook to learn about the analysis of ABFE calculations."
    ]
   }
  ],
