--- a/absolute_binding_free_energies/analysis_abfe.ipynb
+++ b/absolute_binding_free_energies/analysis_abfe.ipynb
@@ -359,7 +359,7 @@
     "\n",
     "While reassuring, it should be noted that a lack of drift of the free energy estimate with respect to increasing simulation time does not guarantee converged sampling - it may be that transitions to other important configurations are not sampled on the timescale of the simulations.\n",
     "\n",
-    "<span style=\"color:pink\">Further reading </span>: 8.1 (Detecting the boundary between equilibrated and production regions), The multistate Bennett acceptance ratio), 8.5 (Convergence of simulations)\n",
+    "<span style=\"color:pink\">Further reading </span>: 8.1 (Detecting the boundary between equilibrated and production regions, The multistate Bennett acceptance ratio), 8.5 (Convergence of simulations)\n",
     "\n",
     "##### <span style=\"color:skyblue\"> Exercise: Discrepancies Between Runs </span> <span style=\"color:purple\">(Extra)</span>\n",
     "\n",
