Improve appearance of overlap matrix image

--- a/absolute_binding_free_energies/setup_abfe.ipynb
+++ b/absolute_binding_free_energies/setup_abfe.ipynb
@@ -454,7 +454,7 @@
     "\n",
     "An example overlap matrix (discharge stage of the bound leg) for the final set of $\\mathrm{\\lambda}$ windows is shown below:\n",
     "\n",
-    "<img src=\"images/overlap_mat.png\" width=\"400\"/>\n",
+    "<img src=\"images/overlap.png\" width=\"400\"/>\n",
     "\n",
     "The first off-diagonal terms are sufficiently large (much greater than 0.03), indicating good overlap and giving us some confidence that the MBAR estimate will be reliable.\n",
     "\n",
