--- a/relative_binding_free_energies/analysis_rbfe.ipynb
+++ b/relative_binding_free_energies/analysis_rbfe.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# <span style=\"color:teal\">RBFE Network Tutorial - Analysis</span>\n",
     "This is the RBFE (Relative Binding Free Energy) analysis jupyter notebook for the September 2022 CCPBioSim Workshop.\n",
-    "It includes core as well as <span style=\"color:purple\">extra</span> options.\n",
+    "\n",
+    "This notebook includes core as well as <span style=\"color:purple\">extra</span> options. To ensure you have time to complete all notebooks, **we strongly recommend that you work through the notebooks to the end before returning to complete the extra sections**.\n",
     "\n",
     "**<span style=\"color:teal\">Authors</span>**\n",
     " - Anna Herz (@annamherz)\n",
@@ -59,9 +60,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anna/anaconda3/envs/working/lib/python3.9/site-packages/numpy/core/getlimits.py:500: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
+      "  setattr(self, word, getattr(machar, word).flat[0])\n",
+      "/home/anna/anaconda3/envs/working/lib/python3.9/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
+      "  return self._float_to_str(self.smallest_subnormal)\n",
+      "/home/anna/anaconda3/envs/working/lib/python3.9/site-packages/numpy/core/getlimits.py:500: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
+      "  setattr(self, word, getattr(machar, word).flat[0])\n",
+      "/home/anna/anaconda3/envs/working/lib/python3.9/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
+      "  return self._float_to_str(self.smallest_subnormal)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n",
+      "<>:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "<>:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "/tmp/ipykernel_170589/1972170702.py:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "  if key is not \"error\":\n"
+     ]
+    }
+   ],
    "source": [
     "# import libraries\n",
     "import BioSimSpace as BSS\n",
@@ -110,9 +137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==============================================================\n",
+      "Sending anonymous Sire usage statistics to http://siremol.org.\n",
+      "For more information, see http://siremol.org/analytics\n",
+      "To disable, set the environment variable 'SIRE_DONT_PHONEHOME' to 1\n",
+      "To see the information sent, set the environment variable \n",
+      "SIRE_VERBOSE_PHONEHOME equal to 1. To silence this message, set\n",
+      "the environment variable SIRE_SILENT_PHONEHOME to 1.\n",
+      "==============================================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# selected network\n",
     "# we will define the engine here for ease\n",
@@ -231,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
