--- a/relative_binding_free_energies/setup_rbfe.ipynb
+++ b/relative_binding_free_energies/setup_rbfe.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# <span style=\"color:teal\">RBFE Network Tutorial - Setup</span>\n",
     "This is the RBFE (Relative Binding Free Energy) setup workflow jupyter notebook for the September 2022 CCPBioSim Workshop.\n",
-    "It includes core as well as <span style=\"color:purple\">extra</span> options.\n",
+    "\n",
+    "This notebook includes core as well as <span style=\"color:purple\">extra</span> options. To ensure you have time to complete all notebooks, **we strongly recommend that you work through the notebooks to the end before returning to complete the extra sections**.\n",
     "\n",
     "**<span style=\"color:teal\">Authors</span>**\n",
     " - Anna Herz (@annamherz)\n",
@@ -116,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BSS.Notebook.View(\"input/protein.pdb\").system()"
+    "BSS.Notebook.View(\"inputs/protein.pdb\").system()"
    ]
   },
   {
