--- a/relative_binding_free_energies/analysis_rbfe.ipynb
+++ b/relative_binding_free_energies/analysis_rbfe.ipynb
@@ -60,35 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/anna/anaconda3/envs/working/lib/python3.9/site-packages/numpy/core/getlimits.py:500: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
-      "  setattr(self, word, getattr(machar, word).flat[0])\n",
-      "/home/anna/anaconda3/envs/working/lib/python3.9/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
-      "  return self._float_to_str(self.smallest_subnormal)\n",
-      "/home/anna/anaconda3/envs/working/lib/python3.9/site-packages/numpy/core/getlimits.py:500: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
-      "  setattr(self, word, getattr(machar, word).flat[0])\n",
-      "/home/anna/anaconda3/envs/working/lib/python3.9/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
-      "  return self._float_to_str(self.smallest_subnormal)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n",
-      "<>:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "<>:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "/tmp/ipykernel_170589/1972170702.py:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "  if key is not \"error\":\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import libraries\n",
     "import BioSimSpace as BSS\n",
@@ -102,8 +76,7 @@
     "\n",
     "# import from path (github clone) as a conda install is not available yet for freenrgworkflows.\n",
     "import sys\n",
-    "sys.path.insert(1, '../freenrgworkflows/networkanalysis/')\n",
-    "\n",
+    "sys.path.insert(1, './freenrgworkflows/networkanalysis/')\n",
     "import networkanalysis\n",
     "import experiments\n",
     "import stats\n",
