Final changes to notebooks

--- a/absolute_binding_free_energies/answers/setup_abfe_answers.ipynb
+++ b/absolute_binding_free_energies/answers/setup_abfe_answers.ipynb
@@ -421,7 +421,8 @@
     "                                 topology=\"input/complex/mif_mif180.prm7\")\n",
     "                                 \n",
     "restraint = BSS.FreeEnergy.RestraintSearch.analyse(\"output/restraint_search\", system, traj, \n",
-    "                                                    298 * BSS.Units.Temperature.kelvin, cutoff=8, method='BSS', append_to_lig_selection=\"name CAR CAL NAV NAM NAN\")"
+    "                                                    298 * BSS.Units.Temperature.kelvin, method='BSS',\n",
+    "                                                    append_to_lig_selection=\"name CAR CAL NAV NAM NAN\")"
    ]
   },
   {
@@ -595,7 +596,7 @@
     "```Python\n",
     "lam_vals=pd.DataFrame(data={'bonded': [0.0, ... 1.0],\n",
     "                            'coul': [0.0, ... 1.0],\n",
-    "                            'vdw':  [0.0, ... 1.0]}))\n",
+    "                            'vdw':  [0.0, ... 1.0]})\n",
     "```\n",
     "Because of this, the initial value of lambda must be set as a pandas series:\n",
     "```Python\n",
