--- a/absolute_binding_free_energies/setup_abfe.ipynb
+++ b/absolute_binding_free_energies/setup_abfe.ipynb
@@ -581,7 +581,7 @@
     "```Python\n",
     "lam_vals=pd.DataFrame(data={'bonded': [0.0, ... 1.0],\n",
     "                            'coul': [0.0, ... 1.0],\n",
-    "                            'vdw':  [0.0, ... 1.0]}))\n",
+    "                            'vdw':  [0.0, ... 1.0]})\n",
     "```\n",
     "Because of this, the initial value of lambda must be set as a pandas series:\n",
     "```Python\n",
