adjustments to visualisation of adjusted network

--- a/relative_binding_free_energies/setup_rbfe.ipynb
+++ b/relative_binding_free_energies/setup_rbfe.ipynb
@@ -338,12 +338,9 @@
     "# Generate the graph.\n",
     "graph = nx.Graph()\n",
     "\n",
-    "images = sorted(glob.glob(f\"visualise_network/images/0*.png\"))\n",
-    "\n",
     "# Loop over the nligands and add as nodes to the graph.\n",
-    "for lig,image in zip(ligand_names,images):\n",
-    "    img=mpimg.imread(image)\n",
-    "    graph.add_node(lig, image=img, label=lig, labelloc=\"t\")\n",
+    "for lig in ligand_names:\n",
+    "    graph.add_node(lig, label=lig, labelloc=\"t\")\n",
     "\n",
     "# Loop over the edges in the dictionary and add to the graph.\n",
     "for edge in pert_network_dict:\n",
@@ -352,17 +349,16 @@
     "\n",
     "# Plot the networkX graph.\n",
     "pos = nx.kamada_kawai_layout(graph)\n",
-    "plt.figure()\n",
+    "plt.figure(figsize=(14,14), dpi=150)\n",
     "nx.draw(\n",
     "    graph, pos, edge_color='black', width=1, linewidths=1,\n",
-    "    node_size=800, node_color='teal', font_size = 8,\n",
-    "    labels={node: node for node in graph.nodes()}\n",
-    ")\n",
+    "    node_size=1500, node_color='skyblue', font_size = 12,\n",
+    "    labels={node: node for node in graph.nodes()})\n",
+    "\n",
     "nx.draw_networkx_edge_labels(\n",
     "    graph, pos,\n",
     "    edge_labels=pert_network_dict,\n",
-    "    font_color='purple', font_size=5\n",
-    ")\n",
+    "    font_color='purple', font_size=10)\n",
     "\n",
     "plt.show()\n"
    ]
