answers and sample outputs for analysis RBFE

--- a/relative_binding_free_energies/answers/analysis_rbfe_answers.ipynb
+++ b/relative_binding_free_energies/answers/analysis_rbfe_answers.ipynb
@@ -776,6 +776,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# answer \n",
     "error_table = pd.DataFrame(freenrg_df_pert[\"err_fep\"]).sort_values(by=\"err_fep\")\n",
     "\n",
     "# we can write the table to a csv file that can be opened in e.g. Excel.\n",
@@ -800,6 +801,16 @@
    "source": [
     "# remove the perturbation\n",
     "# FIXME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# answer\n",
+    "perturbations.remove(\"jmc_30~ejm_50\")"
    ]
   },
   {
@@ -885,6 +896,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# answer\n",
+    "# below are just copies of the cells we want to rerun:\n",
+    "\n",
+    "# rewrite the results files for this network\n",
+    "results_all_files = []\n",
+    "no_repeats=6\n",
+    "# create a list of the results files\n",
+    "for r in list(range(1, no_repeats+1)):\n",
+    "    file_name = f\"analysis/repeat_{r}_tyk2.csv\"\n",
+    "    results_all_files.append(file_name)\n",
+    "\n",
+    "results_files = []\n",
+    "\n",
+    "for file in results_all_files:\n",
+    "    new_file_name = f\"analysis/results_{results_all_files.index(file)}_excluded_perturbation.csv\"\n",
+    "    with open(new_file_name, \"w\") as result_file:\n",
+    "\n",
+    "        writer = csv.writer(result_file, delimiter=\",\")\n",
+    "        writer.writerow([\"lig_1\",\"lig_2\",\"freenrg\",\"error\",\"engine\"])\n",
+    "\n",
+    "        for row, index in pd.read_csv(file).iterrows():\n",
+    "            pert = f\"{index['lig_1']}~{index['lig_2']}\"\n",
+    "            if pert in perturbations:\n",
+    "                writer.writerow([index['lig_1'], index['lig_2'], index['freenrg'], index['error'], index['engine']])    \n",
+    "\n",
+    "        results_files.append(new_file_name)\n",
+    "\n",
+    "# analyse the network again\n",
+    "nA = networkanalysis.NetworkAnalyser()\n",
+    "\n",
+    "first_file = False\n",
+    "for file_name in results_files:\n",
+    "    if first_file is False:\n",
+    "        nA.read_perturbations_pandas(file_name, comments='#')\n",
+    "        first_file = True\n",
+    "    else:\n",
+    "        # add more replicates to the graph. FreeNrgWorkflows will take care of averaging \n",
+    "        # the free energies as well as propagating the error.\n",
+    "        nA.add_data_to_graph_pandas(file_name)\n",
+    "\n",
+    "computed_relative_DDGs = nA.freeEnergyInKcal\n",
+    "\n",
+    "# make the dictionary for plotting again\n",
+    "\n",
+    "freenrg_dict = {}\n",
+    "\n",
+    "intermediate_string=\" \"\n",
+    "\n",
+    "# construct dict with experimental freenrg and error.\n",
+    "for ligand in exper_val_dict:\n",
+    "    # only consider the values for the ligands in this network\n",
+    "    if ligand in ligands:\n",
+    "        freenrg = exper_val_dict[ligand][0]\n",
+    "        error = exper_val_dict[ligand][1]\n",
+    "        freenrg_dict[ligand] = [freenrg, error]\n",
+    "\n",
+    "# append computed freenrg and error.\n",
+    "for item in computed_relative_DDGs:\n",
+    "        ligand = list(item.keys())[0]\n",
+    "        freenrg = list(item.values())[0]\n",
+    "        error = list(item.values())[1]\n",
+    "                \n",
+    "        if intermediate_string not in ligand:\n",
+    "            freenrg_dict[ligand].append(freenrg)\n",
+    "            freenrg_dict[ligand].append(error)\n",
+    "\n",
+    "freenrg_df = pd.DataFrame(freenrg_dict, index=[\"freenrg_exp\", \"err_exp\", \"freenrg_fep\", \"err_fep\"]).transpose()\n",
+    "\n",
+    "# save our results to a file that can be opened in e.g. Excel.\n",
+    "freenrg_df.to_csv(\"analysis/fep_results_table_per_ligand_excluded_perturbation.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(7,7))\n",
     "\n",
     "plt.scatter(freenrg_df[\"freenrg_exp\"], freenrg_df[\"freenrg_fep\"], zorder=10)\n",
@@ -957,6 +1046,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(7,7))\n",
+    "\n",
+    "plt.scatter(freenrg_df[\"freenrg_exp\"], freenrg_df[\"freenrg_fep\"], zorder=10)\n",
+    "\n",
+    "# plot 1/2 kcal bounds:\n",
+    "plt.fill_between(\n",
+    "\t\t\t\tx=[-100, 100], \n",
+    "\t\t\t\ty2=[-100.25,99.75],\n",
+    "\t\t\t\ty1=[-99.75, 100.25],\n",
+    "\t\t\t\tlw=0, \n",
+    "\t\t\t\tzorder=-10,\n",
+    "\t\t\t\talpha=0.3,\n",
+    "\t\t\t\tcolor=\"grey\")\n",
+    "# upper bound:\n",
+    "plt.fill_between(\n",
+    "\t\t\t\tx=[-100, 100], \n",
+    "\t\t\t\ty2=[-99.5,100.5],\n",
+    "\t\t\t\ty1=[-99.75, 100.25],\n",
+    "\t\t\t\tlw=0, \n",
+    "\t\t\t\tzorder=-10,\n",
+    "\t\t\t\tcolor=\"grey\", \n",
+    "\t\t\t\talpha=0.2)\n",
+    "# lower bound:\n",
+    "plt.fill_between(\n",
+    "\t\t\t\tx=[-100, 100], \n",
+    "\t\t\t\ty2=[-100.25,99.75],\n",
+    "\t\t\t\ty1=[-100.5, 99.5],\n",
+    "\t\t\t\tlw=0, \n",
+    "\t\t\t\tzorder=-10,\n",
+    "\t\t\t\tcolor=\"grey\", \n",
+    "\t\t\t\talpha=0.2)\n",
+    "\n",
+    "# plot error bars:\n",
+    "yerr = freenrg_df[\"err_fep\"]\n",
+    "xerr = freenrg_df[\"err_exp\"]\n",
+    "\n",
+    "plt.errorbar(freenrg_df[\"freenrg_exp\"], freenrg_df[\"freenrg_fep\"], \n",
+    "            yerr=yerr,\n",
+    "            xerr=xerr,   # comment this line to hide experimental error bars \\\n",
+    "                         # as this can sometimes overcrowd the plot.\n",
+    "            ls=\"none\",\n",
+    "            lw=0.5, \n",
+    "            capsize=2,\n",
+    "            color=\"black\",\n",
+    "            zorder=5\n",
+    "            )\n",
+    "\n",
+    "# format the plot further.\n",
+    "plt.axhline(color=\"black\", zorder=1)\n",
+    "plt.axvline(color=\"black\", zorder=1)\n",
+    "plt.ylabel(\"Predicted $\\Delta$G$_{bind}$ / kcal$\\cdot$mol$^{-1}$\")\n",
+    "plt.xlabel(\"Experimental $\\Delta$G$_{bind}$ / kcal$\\cdot$mol$^{-1}$\")\n",
+    "\n",
+    "# get the bounds. This can be done with min/max or simply by hand.\n",
+    "all_freenrg_values = np.concatenate([freenrg_df[\"freenrg_exp\"].values,freenrg_df[\"freenrg_fep\"].values])\n",
+    "min_lim = min(all_freenrg_values)\n",
+    "max_lim = max(all_freenrg_values)\n",
+    "\n",
+    "# for a scatterplot we want the axis ranges to be the same. \n",
+    "plt.xlim(min_lim*1.3, max_lim*1.3)\n",
+    "plt.ylim(min_lim*1.3, max_lim*1.3)\n",
+    "\n",
+    "plt.savefig(\"analysis/fep_vs_exp_scatterplot_per_ligand_excluded_perturbation.png\", dpi=300)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# initiate an empty figure with fixed dimensions.\n",
     "fig, ax = plt.subplots(figsize=(10,5))\n",
     "\n",
@@ -979,6 +1140,37 @@
     "plt.legend()\n",
     "\n",
     "plt.savefig(\"analysis/fep_vs_exp_barplot_per_ligand.png\"  #FIXME, dpi=300)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initiate an empty figure with fixed dimensions.\n",
+    "fig, ax = plt.subplots(figsize=(10,5))\n",
+    "\n",
+    "# determine positions for X axis labels.\n",
+    "x_locs = np.arange(len(freenrg_df))\n",
+    "\n",
+    "# set bar width\n",
+    "width = 0.35  \n",
+    "\n",
+    "# plot both our experimental and FEP free energies using an offset on the x position so bars don't overlap.\n",
+    "ax.bar(x_locs - width/2, height=freenrg_df[\"freenrg_exp\"], width=width, yerr=freenrg_df[\"err_exp\"],\n",
+    "                label='Experimental')\n",
+    "ax.bar(x_locs + width/2, height=freenrg_df[\"freenrg_fep\"], width=width, yerr=freenrg_df[\"err_fep\"],\n",
+    "                label='FEP')\n",
+    " \n",
+    "# format the plot further.\n",
+    "plt.axhline(color=\"black\")\n",
+    "plt.ylabel(\"$\\Delta$G$_{bind}$ / kcal$\\cdot$mol$^{-1}$\")\n",
+    "plt.xticks(x_locs, freenrg_df.index, rotation=70, ha=\"right\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.savefig(\"analysis/fep_vs_exp_barplot_per_ligand_excluded_perturbation.png\", dpi=300)\n",
     "plt.show()"
    ]
   },
@@ -1011,6 +1203,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**answer**\n",
+    "excluding the perturbation should have improved the statistical tests.\n",
+    "previous output was:\n",
+    "R confidence is:   -0.25 < -0.22 < -0.18\n",
+    "MUE confidence is: 1.60 < 1.63 < 1.67\n",
+    "Tau confidence is: -0.22 < -0.20 < -0.16\n",
+    "\n",
+    "the results with the excluded perturbation are:\n",
+    "R confidence is:   0.49 < 0.52 < 0.56\n",
+    "MUE confidence is: 0.88 < 0.92 < 0.95\n",
+    "Tau confidence is: 0.30 < 0.33 < 0.37\n",
+    "\n",
+    "Also visually, both the scatter and the bar plot show better agreement with experimental data.\n",
+    "This is particularly true for example for 'jmc30', where the previous output for the FEP result per ligand was almost the complete opposite of the experimental, whereas now it has no significant difference to the experimental."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**<span style=\"color:skyblue\">Exercise: Visualising the ligand</span> <span style=\"color:purple\"> (Extra)</span>**\n",
     "\n",
     "Based on our results, we may also want to visualise which of our ligands had the highest binding affinity.\n",
@@ -1025,6 +1237,29 @@
    "outputs": [],
    "source": [
     "# FIXME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# answer \n",
+    "results_table = pd.DataFrame(freenrg_df[\"freenrg_fep\"]).sort_values(by=\"freenrg_fep\")\n",
+    "\n",
+    "results_table.to_csv(\"analysis/fep_predictions_excluded_perturbation.csv\")\n",
+    "results_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# answer\n",
+    "BSS.Notebook.View(\"inputs/ligands/ejm44.sdf\").system()"
    ]
   },
   {
